This is a major commit about RowSpan bug (#13058, #12781, #13689). Also, include the fix from giorand about <pre> spaces.

--- a/Demo/Advanced Table.htm
+++ b/Demo/Advanced Table.htm
@@ -4,6 +4,85 @@
     <title></title>
 </head>
 <body>
+    <table align="center" border="1">
+    <tbody>
+        <tr>
+            <td align="center" style="background-color: rgb(135,206,235);" colspan="2"><strong><span style="font-size: 13px; font-family: tahoma;">Change Type</span></strong></td>
+            <td align="center" style="background-color: rgb(135,206,235);"><strong><span style="font-size: 13px; font-family: tahoma;">Change Risk</span></strong></td>
+            <td align="center" style="background-color: rgb(135,206,235);"><strong><span style="font-size: 13px; font-family: tahoma;">Approval Body</span></strong></td>
+        </tr>
+        <tr>
+            <td rowspan="4"><strong><span style="font-size: 13px; font-family: tahoma;">Emergency</span></strong></td>
+            <td rowspan="4"><strong><span style="font-size: 13px; font-family: tahoma;">Normal</span></strong></td>
+            <td align="center" style="background-color: rgb(255,0,0);"><strong><span style="font-size: 13px; font-family: tahoma;">Level 1</span></strong></td>
+            <td align="center"><span style="font-size: 13px; font-family: tahoma;">MS COO</span></td>
+        </tr>
+        <tr>
+            <td align="center" style="background-color: rgb(255,165,0);"><strong><span style="font-size: 13px; font-family: tahoma;">Level 2</span></strong></td>
+            <td align="center"><span style="font-size: 13px; font-family: tahoma;">CAB or E-CAB</span></td>
+        </tr>
+        <tr>
+            <td align="center" style="background-color: rgb(255,215,0);"><strong><span style="font-size: 13px; font-family: tahoma;">Level 3</span></strong></td>
+            <td align="center"><span style="font-size: 13px; font-family: tahoma;">CAB or E-CAB</span></td>
+        </tr>
+        <tr>
+            <td align="center" style="background-color: rgb(255,255,0);" rowspan="2"><strong><span style="font-size: 13px; font-family: tahoma;">Level 4</span></strong></td>
+            <td align="center"><span style="font-size: 13px; font-family: tahoma;">Originator's Manager</span></td>
+        </tr>
+        <tr>
+            <td align="center" colspan="2"><strong><span style="font-size: 13px; font-family: tahoma;">Standard</span></strong></td>
+            <td align="center"><span style="font-size: 13px; font-family: tahoma;">Originator's Manager</span></td>
+        </tr>
+    </tbody>
+    </table>
+
+    <table border="1">
+        <tr>
+            <th>Test Stuff</th>
+            <th colspan="2" rowspan="2">Testing</th>
+        </tr>
+        <tr>
+            <td>Things</td>
+        </tr>
+        <tr>
+            <td>hello</td>
+            <td>world</td>
+            <td>!</td>
+        </tr>
+    </table>
+
+    <table cellspacing="0" cellpadding="100" border="1">
+        <tbody>
+            <tr>
+                <td>Hello</td>
+            </tr>
+            <tr>
+                <td>world!!!</td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- style="margin: 40px;" -->
+    <table cellspacing="0" cellpadding="10" border="1" >
+        <tbody>
+            <tr>
+                <td>Hello</td>
+            </tr>
+            <tr>
+                <td>world!!!</td>
+            </tr>
+        </tbody>
+    </table>
+    <table cellspacing="100" cellpadding="0" border="1">
+        <tbody>
+            <tr>
+                <td>Hello</td>
+            </tr>
+            <tr>
+                <td>world!!!</td>
+            </tr>
+        </tbody>
+    </table>
+    
 
 <table style="width: 90%;" cellspacing="0" cellpadding="2" align="center" border=0>
 <tbody>
