--- a/Demo/Demo2.htm
+++ b/Demo/Demo2.htm
@@ -1,5 +1,7 @@
-﻿p>$#Candidate Code#$</p>
+﻿<p>$#Candidate Code#$</p>
 <p>&nbsp;</p>
+<h3>Hello dude</h3>
+<span class="MyClass">bonjour je suis du texte en mauve.</span>
 <table width="396" style="width: 396px; height: 125px; margin-right: auto; margin-left: auto;" border="1">
 <tbody>
 <tr>
