--- a/Demo/CompleteRunTest.html
+++ b/Demo/CompleteRunTest.html
@@ -27,13 +27,17 @@
     <span style="font-weight: 700">700</span><br />
     <span style="font-weight: 800">800</span><br />
     <span style="font-weight: 900">900</span><br />
-
+    <span>The common <b> kingfisher</b> (Alcedo atthis) is a small kingfisher with seven subspecies recognized within its wide distribution across Eurasia and North Africa</span>
     <font size="2" color="blue">Font size=2, color=blue</font><br />
     <font face="verdana" color="green">Font face=verdana, color=green</font> <br />
 
     <abbr title="Organisation des nations unies">abbreviation NATO</abbr><br />
+    <abbr title="https://en.wikipedia.org/wiki/N ATO">abbreviation Link NATO</abbr><br />
+    <abbr title="file://C:\temp\NATO.html">abbreviation Link NATO</abbr><br />
+    <abbr title="\\server01\share\NATO.html">abbreviation Link NATO</abbr><br />
     <acronym title="Organisation des nations unies">acronym NATO</acronym>
 
+    <p style="text-indent: 50px">In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since. 'Whenever you feel like criticizing anyone,' he told me, 'just remember that all the people in this world haven't had the advantages that you've had.'</p>
 
     <a href="www.google.be">Google</a>
     <a href="www.google.be"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==" alt="Red dot" /> Red Dot</a>
@@ -80,18 +84,18 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
      <p>delta parameter (<span style='font-family:Symbol'>d</span>)</p>
      Looks how cool is <font size="x-large" color="maroon"><b>Open Xml</b></font>.
      <hr />
-     Now with <font color="red"><u>HtmlToOpenXml</u></font>, it nevers been so easy to convert html.
+     Now with <font color="red"><u>HtmlToOpenXml</u></font>, it never been so easy to convert html.
      <p>
         If you like it, add me a rating on <a href="http://notesforhtml2openxml.codeplex.com">codeplex</a>
      </p>
 
-        ici
+        simple text
      <div style="page-orientation: landscape; page-break-before: always">
       Hello !
       je suis du texte
       <span style="font-style: oblique">écrit en oblique.</span>
 
-      <pre lang="fr-FR" class="c#">public void SetContentType(System.Web.HttpRequest request, System.Web.HttpResponse response, String reportName)
+      <pre lang="fr-FR" class="c#">  public void SetContentType(System.Web.HttpRequest request, System.Web.HttpResponse response, String reportName)
 {
 	if (request.Browser.Browser.Contains(&quot;IE&quot;))
 	{
@@ -102,20 +106,10 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
 	}
 }
 </pre>
-
-
-<table width="396" style="width: 396px; height: 125px; margin-right: auto; margin-left: auto;" border="1">
-<tbody>
-    <tr>
-        <td border="1">&nbsp;saa</td>
-        <td border="1">&nbsp;fdgdfg</td>
-    </tr>
-    <tr>
-        <td border="1">&nbsp;</td>
-        <td border="1">&nbsp;</td>
-    </tr>
-</tbody>
-</table>
+         <hr/>
+         <pre>
+Some &lt;Pre&gt; starting one 
+line below! </pre>
 
     </div>
     
