Remove dependency on System.Drawing

--- a/examples/Demo/Resources/AdvancedTable.html
+++ b/examples/Demo/Resources/AdvancedTable.html
@@ -87,12 +87,12 @@
 <table style="width: 90%;" cellspacing="0" cellpadding="2" align="center" border=0>
 <tbody>
     <tr align="center">
-        <td><span style="background-color: #ffffff;">Reviewed by: ________________________________</span></td>
+        <td><span style="background-color: #f0f;">Reviewed by: ________________________________</span></td>
         <td><span style="background-color: #ffffff;">Acceptance: ________________________________</span></td>
     </tr> 
     <tr align="center">
         <td><span style="background-color: #ffffff;">(Producer name / date)</span></td> 
-        <td><span style="background-color: #ffffff;">(Representative name / date)</span></td>
+        <td style='color:red'><span style="background-color: #ffffff;">(Representative name / date)</span></td>
     </tr>
 </tbody>
 </table>
@@ -188,5 +188,26 @@
         <td>Studio Ghibli</td>
     </tr>
 </table>
+
+<table style="width: 100%;">
+    <tbody>
+    <tr>
+        <th style="background-color: #d5d5d5;text-decoration: underline line-through">Component</th>
+        <th style="background-color: #d5d5d5;">Area m²</th>
+        <th style="background-color: #d5d5d5; text-align: right;">%</th>
+    </tr>
+    <tr>
+        <td style="width: 40%; text-align: left;"> </td>
+        <td style="width: 30%; text-align: right;"> </td>
+        <td style="width: 30%; text-align: right;"> </td>
+    </tr>
+    <tr>
+        <td style="width: 40%; text-align: left;">Total</td>
+        <td style="width: 30%; text-align: right;"> </td>
+        <td style="width: 30%; text-align: right;">100.0</td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
