Consider non integer font-size #129

--- a/examples/Demo/Resources/CompleteRunTest.html
+++ b/examples/Demo/Resources/CompleteRunTest.html
@@ -103,7 +103,7 @@
 For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
 </blockquote> 
 
-<br class="ibp-rteFontSize-5"/><span style="font-size: 16px">My Text </span>
+<br class="ibp-rteFontSize-5"/><span style="font-size: 16.9px">My Text </span>
 
 <p>An ordered list:</p>
     <ol>
@@ -132,7 +132,7 @@ For 50 years, WWF has been protecting the future of nature. The world's leading 
      <hr />
      Now with <font color="red"><u>HtmlToOpenXml</u></font>, it never been so easy to convert html.
      <p>
-        If you like it, add me a rating on <a href="http://notesforhtml2openxml.codeplex.com">codeplex</a>
+      If you like it, add me a rating on <a href="https://github.com/onizet/html2openxml">github</a>
      </p>
 
         simple text
