Initial commit refactoring to use AngleSharp

--- a/examples/Demo/Resources/CompleteRunTest.html
+++ b/examples/Demo/Resources/CompleteRunTest.html
@@ -4,6 +4,7 @@
     <title></title>
 </head>
 <body>
+    <h1></h1>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
@@ -14,6 +15,8 @@
     <span style="font-variant: small-caps"> Small caps</span><br />
     <strike>Strike</strike> <span style="text-decoration: line-through"> Line Through</span> <span style="text-decoration: overline"> Overline</span> <span style="text-decoration: underline"> Underline</span><br />
     <b>Bold</b><br />
+    <span>This is a <b>bold
+    </b>text</span>
     <span style="font-weight: bold">Bold</span><br />
     <span style="font-weight: bolder">Bolder</span><br />
     <span style="font-weight: lighter">Lighter</span><br />
@@ -100,7 +103,7 @@
 
 
      <blockquote cite="http://www.worldwildlife.org/who/index.html">
-For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+For 50 years, <b>WWF</b> has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
 </blockquote> 
 
 <br class="ibp-rteFontSize-5"/><span style="font-size: 16.9px">My Text </span>
