Provide a non-standard way to support tiered decimal numberings  #81

--- a/examples/Demo/Resources/NumberingList.htm
+++ b/examples/Demo/Resources/NumberingList.htm
@@ -54,3 +54,27 @@
     </li>
     <li>Wine</li>
 </ol>
+
+<ol style="list-style-type: decimal-tiered">
+    <li>one</li>
+    <li>two
+        <ol>
+            <li>two.one</li>
+            <li>two.two</li>
+            <li>two.three</li>
+        </ol>
+    </li>
+    
+    <li>three
+    <ol>
+        <li>three.one</li>
+        <li>three.two
+            <ol>
+                <li>three.two.one</li>
+                <li>three.two.two</li>
+            </ol>
+        </li>
+    </ol>
+    </li>
+    <li>four</li>
+</ol>
